document anonymized ballots
